corrected flexbox wrap problem

--- a/Lois.less
+++ b/Lois.less
@@ -95,6 +95,15 @@
 	    flex-direction: column;
 	    -ms-flex-direction: column;
   	}
+
+    .flexbox > .freeform-for-phone-10em {
+	    -webkit-flex-shrink: 1;
+	    -moz-flex-shrink: 1;
+	    flex-shrink: 1;
+	    -ms-flex-negative: 1;
+	    flex-basis: auto !important;
+	    min-width: 10em;
+    }
 }
 
 @media only screen and (min-width: 1015px) {
